Added the paper to the gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,32 @@
 Thumbs.db
 ehthumbs.db
 
+_posts/NimeGrain/references.json
+_posts/NimeGrain/numeric-by-citation.csl
+_posts/NimeGrain/fig3. UI Thread Copy to visualise grains.png
+_posts/NimeGrain/fig2. Sample Accurate grain overview.png
+_posts/NimeGrain/fig1. Simple Overview of Rain Granular.png
+_posts/NimeGrain/Draft.md
+_posts/NimeGrain/acm-sig-proceedings.csl
+_posts/NimeGrain/A Mobile-Driven Granular Synthesis Engine Using Data-Oriented Design.md
+_posts/NimeGrain/.pandoc/zotero-library-1.json
+_posts/NimeGrain/.pandoc/locales-en-US.xml
+_posts/NimeGrain/.pandoc/locales-en-GB.xml
+_posts/NimeGrain/.pandoc/association-for-computing-machinery.csl
+_posts/NimeGrain/.pandoc/apa.csl
+_posts/NimeGrain/.obsidian/workspace.json
+_posts/NimeGrain/.obsidian/plugins/obsidian-zotero-desktop-connector/styles.css
+_posts/NimeGrain/.obsidian/plugins/obsidian-zotero-desktop-connector/manifest.json
+_posts/NimeGrain/.obsidian/plugins/obsidian-zotero-desktop-connector/main.js
+_posts/NimeGrain/.obsidian/plugins/obsidian-zotero-desktop-connector/data.json
+_posts/NimeGrain/.obsidian/plugins/obsidian-pandoc-reference-list/styles.css
+_posts/NimeGrain/.obsidian/plugins/obsidian-pandoc-reference-list/manifest.json
+_posts/NimeGrain/.obsidian/plugins/obsidian-pandoc-reference-list/main.js
+_posts/NimeGrain/.obsidian/plugins/obsidian-pandoc-reference-list/data.json
+_posts/NimeGrain/.obsidian/graph.json
+_posts/NimeGrain/.obsidian/core-plugins.json
+_posts/NimeGrain/.obsidian/community-plugins.json
+_posts/NimeGrain/.obsidian/appearance.json
+_posts/NimeGrain/.obsidian/app.json
+_posts/.obsidian/workspace.json
+_posts/.obsidian/workspace.json
